<resources>
    <string name="app_name">云音</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="search">Search</string>
    <!--测试用-->
    <string name="singer_test">陈奕迅</string>
    <string name="song_test">红玫瑰</string>
    <string name="info_test">2016跨世界粤语精选</string>

    <!--加载页-->
    <string name="loading">云上的声音\n用心倾听\n……</string>
    <!--导航目录-->
    <string name="message">我的消息</string>
    <string name="member_center">会员中心</string>
    <string name="shop">积分商城</string>
    <string name="listen_online">在线听歌免流量</string>
    <string name="identify_song">听歌识曲</string>
    <string name="theme">主题换肤</string>
    <string name="night_mode">夜间模式</string>
    <string name="timing_stop">定时停止播放</string>
    <string name="scan">扫一扫</string>
    <string name="music_box">我的音乐云盒</string>
    <string name="music_clock">音乐闹钟</string>
    <string name="driving_mode">驾驶模式</string>
    <string name="placeholder">占位行</string>

    <string name="settings">设置</string>
    <string name="quit">退出应用</string>

    <!--本地-->
    <string name="local">本地音乐</string>
    <string name="recent">最近播放</string>
    <string name="download">下载管理</string>
    <string name="my_singers">我的歌手</string>
    <string name="MV">我的MV</string>

    <!--本地音乐-->
    <string-array name="local">
        <item name="song">单曲</item>
        <item name="singers">歌手</item>
        <item name="album">专辑</item>
        <item name="folders">文件夹</item>
    </string-array>

    <!--下载管理-->
    <string-array name="download">
        <item name="song">单曲</item>
        <item name="radio">电台节目</item>
        <item name="MV">MV</item>
        <item name="downloading">下载中</item>
    </string-array>

    <!--本地音乐菜单-->
    <string name="scan_music">扫描本地音乐</string>
    <string name="sort">选择排序方式</string>
    <string name="cover_lyric">获取封面歌词</string>
    <string name="upgrade_quality">升级音质</string>

    <string name="list_count">创建的歌单 (%1$d)</string>

    <string name="disk_count">%1$d首</string>

    <string name="song_info">%1$s - %2$s</string>
    <!--无本地音乐-->
    <string name="empty_disk">暂无本地音乐</string>
    <string name="scan_disk">一键扫描</string>
    <string name="file_not_exist">歌曲文件【%1$s】不存在</string>

    <!--权限-->
    <string name="permission_denied">【%1$s】权限被拒绝,%2$s</string>

    <!--定时停止播放-->
    <string-array name="timing_stop">
        <item name="no_use">不开启</item>
        <item name="mins_10">10分钟后</item>
        <item name="mins_20">20分钟后</item>
        <item name="mins_30">30分钟后</item>
        <item name="mins_45">45分钟后</item>
        <item name="mins_60">60分钟后</item>
        <item name="custom">自定义</item>
    </string-array>

    <string name="stop_after_end">计时结束后播完当前歌曲再停止</string>
</resources>
