<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/search_local"
          android:icon="@drawable/search"
          android:title="@string/search"
          app:showAsAction="always"/>

    <item android:id="@+id/scan_music"
          android:icon="@drawable/scan_local_40"
          android:showAsAction="never"
          android:title="@string/scan_music"/>

    <item android:id="@+id/sort"
          android:icon="@drawable/sort_35"
          android:showAsAction="never"
          android:title="@string/sort"/>

    <item android:id="@+id/cover_lyric"
          android:icon="@drawable/lyric_48"
          android:showAsAction="never"
          android:title="@string/cover_lyric"/>

    <item android:id="@+id/upgrade_quality"
          android:icon="@drawable/music_disk_45"
          android:showAsAction="never"
          android:title="@string/upgrade_quality"/>
</menu>