<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <sbingo.likecloudmusic.widget.LocalMenuItem
        android:id="@+id/local"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:icon="@drawable/mobile_45"
        app:title="@string/local" />

    <sbingo.likecloudmusic.widget.LocalMenuItem
        android:id="@+id/recent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:icon="@drawable/clock_45"
        app:title="@string/recent" />

    <sbingo.likecloudmusic.widget.LocalMenuItem
        android:id="@+id/download"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:icon="@drawable/download_45"
        app:title="@string/download" />

    <sbingo.likecloudmusic.widget.LocalMenuItem
        android:id="@+id/my_singers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:icon="@drawable/singer_45"
        app:title="@string/my_singers" />

    <sbingo.likecloudmusic.widget.LocalMenuItem
        android:id="@+id/mv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:icon="@drawable/mv_45"
        app:title="@string/MV" />

</LinearLayout>